src/tests/syntax_analysis_error/invalid_let_statement/snapshots/monkey_interpreter__tests__syntax_analysis_error__invalid_let_statement__test_invalid_let_statement_case_2_syntax_analysis.snap
---
source: src/tests/syntax_analysis_error/invalid_let_statement/mod.rs
expression: error
---
Err(
    MissingLetIdentifier,
)
